<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bulbasauro.vtmobile.ConfiguracoesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorToolbarTop"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <ScrollView
        android:id="@+id/scrollView_configuracoes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar_menu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_config_secao_geral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/config_secao_geral"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/linearLayout_004"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView_config_secao_geral"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/textView_tema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_tema"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_tema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|right"
                    android:prompt="@string/spinner_config_prompt_02"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_config_tema_explanacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout_004"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/config_tema_explanacao"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/imageView_corte_003"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView_config_tema_explanacao"
                android:background="@color/greyDark"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/config_salvar_login_senha"
                android:id="@+id/switch_config_salvar"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_below="@+id/imageView_corte_003"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView_corte_004"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/greyDark"
                android:layout_alignBottom="@+id/switch_config_salvar"/>

            <TextView
                android:id="@+id/textView_config_secao_topicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_corte_004"
                android:layout_margin="12dp"
                android:text="@string/config_secao_topicos"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/linearLayout_001"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView_config_secao_topicos"
                android:orientation="horizontal"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/textView_toque_simples"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_toque_simples"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <Spinner
                    android:id="@+id/spinner_toques_simples"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|right"
                    android:prompt="@string/spinner_config_prompt_01"
                    android:spinnerMode="dropdown"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_corte_001"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linearLayout_001"
                android:background="@color/greyDark"/>

            <LinearLayout
                android:id="@+id/linearLayout_002"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageView_corte_001"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:id="@+id/textView_toque_duplo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_toque_duplo"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_toques_duplo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|right"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_corte_002"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linearLayout_002"
                android:background="@color/greyDark"/>

            <TextView
                android:id="@+id/textView_config_secao_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_corte_002"
                android:layout_margin="12dp"
                android:text="@string/config_secao_posts"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/linearLayout_003"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView_config_secao_posts"
                android:orientation="horizontal"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <Switch
                    android:id="@+id/switch_config_estilo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/config_post_estilo"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
