<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView_diag_login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorDialog"
        android:padding="20sp"
        android:text="@string/diag_conectar"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autoText="false"/>

    <TextView
        android:id="@+id/textView_diag_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_diag_login_title"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/diag_login_email"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_diag_login_email"
        android:layout_below="@+id/textView_diag_login_email"
        android:layout_alignLeft="@+id/textView_diag_login_email"
        android:layout_alignStart="@+id/textView_diag_login_email"
        android:layout_marginRight="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diag_login_senha"
        android:id="@+id/textView_diag_login_senha"
        android:layout_below="@+id/editText_diag_login_email"
        android:layout_alignLeft="@+id/editText_diag_login_email"
        android:layout_alignStart="@+id/editText_diag_login_email"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_diag_login_senha"
        android:layout_below="@+id/textView_diag_login_senha"
        android:layout_alignLeft="@+id/textView_diag_login_senha"
        android:layout_alignStart="@+id/textView_diag_login_senha"
        android:layout_marginRight="20sp"/>

</RelativeLayout>