<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bulbasauro.vtmobile.MandarMpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ToolbarStyle"/>

    <ScrollView
        android:id="@+id/scrollView_mp_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_menu"
        android:layout_above="@+id/toolbar_postar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/destinatario"
                android:id="@+id/textView_mp_destinatario"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_mp_destinatario"
                android:layout_below="@+id/textView_mp_destinatario"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:maxLength="70"
                android:gravity="top"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/posts_assunto"
                android:id="@+id/textView_novoTopico_assunto"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_below="@+id/editText_mp_destinatario"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts_assunto_placeholder_mensagemCount"
                android:id="@+id/textView_postar_assunto_mensagemCount"
                android:layout_marginLeft="55dp"
                android:layout_marginStart="55dp"
                android:textSize="12sp"
                android:layout_above="@+id/editText_postar_assunto"
                android:layout_alignLeft="@+id/editText_postar_assunto"
                android:layout_alignStart="@+id/editText_postar_mensagem"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_postar_assunto"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:gravity="top"
                android:inputType="textCapSentences|textAutoCorrect"
                android:layout_below="@+id/textView_novoTopico_assunto"
                android:maxLength="100"/>

            <TextView
                android:id="@+id/textView_postar_mensagem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_postar_assunto"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                android:text="@string/posts_mensagem"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts_placeholder_mensagemCount"
                android:id="@+id/textView_postar_mensagemCount"
                android:layout_alignLeft="@+id/editText_postar_mensagem"
                android:layout_alignStart="@+id/editText_postar_mensagem"
                android:layout_above="@+id/editText_postar_mensagem"
                android:textSize="12sp"
                android:layout_marginLeft="72dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_postar_mensagem"
                android:layout_below="@+id/textView_postar_mensagem"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:gravity="top"
                android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                android:layout_alignParentStart="true"
                android:maxLength="15000"/>

        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_postar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16sp"
            android:layout_marginEnd="16sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_toolbar_postar_cancelar"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:scrollbars="vertical"
                android:text="@string/posts_cancelar"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView_toolbar_postar_emoticon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/emoticon"/>

            <TextView
                android:id="@+id/textView_toolbar_postar_enviar"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/posts_enviar"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>
